--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --open",
+    "start": "ng serve --proxy-config proxy.conf.json --open",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "boostrap": "^2.0.0",
+    "bootstrap": "^5.2.1",
+    "bootstrap-icons": "^1.9.1",
     "ngx-cookie-service": "^13.1.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
