--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@coreui/icons": "^2.1.0",
     "@coreui/icons-angular": "~4.2.15",
     "@coreui/utils": "^1.3.1",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.3",
     "chart.js": "^3.9.1",
     "ngx-cookie-service": "^14.0.1",
     "ngx-perfect-scrollbar": "^10.1.1",
